--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <span class="text-primary">Li</span>
         </h1>
         <div class="subheading mb-5">2505 Longview Street · Austin, TX 78705 · (737) 230-7850 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+          <a href="mailto:name@email.com">asahi.lee@utexas.edu</a>
         </div>
         <p class="lead mb-5">I am an experienced skilled software developer. Also have great passion on data. My greatest dream is to become a data scientist and use data to the make the world a better place.</p>
         <div class="social-icons">
