change icon link

--- a/index.html
+++ b/index.html
@@ -71,16 +71,13 @@
         </div>
         <p class="lead mb-5">I am an experienced skilled software developer. Also have great passion on data. My greatest dream is to become a data scientist and use data to make the world a better place.</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/xu-li-398a00b3/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/ProgrammerAsahi">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
+          <a href="https://www.facebook.com/otaku.asahi">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
