modify self intro

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">2505 Longview Street · Austin, TX 78705 · (737) 230-7850 ·
           <a href="mailto:name@email.com">asahi.lee@utexas.edu</a>
         </div>
-        <p class="lead mb-5">I am an experienced skilled software developer. Also have great passion on data. My greatest dream is to become a data scientist and use data to make the world a better place.</p>
+        <p class="lead mb-5">I am an experienced and skilled software developer. Also have great passion on data. My greatest dream is to become a data scientist and use data to make the world a better place.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/xu-li-398a00b3/">
             <i class="fab fa-linkedin-in"></i>
