modify experience part

--- a/index.html
+++ b/index.html
@@ -92,45 +92,56 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Data Science Intern</h3>
+            <div class="subheading mb-3">Vertify</div>
+            <p>Added intelligence to data integration services. Made predictions about sales opportunity status based on users' activity data. Provided probability and score of every in-progress sales opportunities. Using Python and Machine Learning Algorithms. </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">February 2020 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Cloud Engineer Intern</h3>
+            <div class="subheading mb-3">HomeAway</div>
+            <p>Designed the architecture and main components of KSQL (stands for Kafka SQL) Server. Implemented the KSQL Server in two modes respectively – interactive mode & headless mode. Interactive mode of KSQL Server is suitable for short-term usage and supports access by using REST APIs. Headless mode of KSQL Server is suitable for long-term usage and supports access by deploying SQL query file. Developed the User Define Function module for both modes of KSQL Server by using Java. Added Prometheus and Datadog module to visualize the metrics related to KSQL Server and monitor its status. Improved the log outputs of KSQL Server and enabled checking the log of KSQL Server by using Splunk. Built Docker Containers for both modes of KSQL Server and deployed them successfully to the cloud server (AWS). Created Maven Archetype of the headless mode KSQL Server and significantly improved the deploying efficiency. Used Jira to record and track all the key development process and bug fixing process of KSQL Server. This KSQL project significantly shortened the development cycle of real-time data streaming application.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">June 2019 - August 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Backend Engineer Intern</h3>
+            <div class="subheading mb-3">Laiye</div>
+            <p>Designed & Built Kafka Clusters to collect real-time user data and store into MySQL and MongoDB, using Python. Redesigned the structure of database and finished data migration with no loss or duplicates. Maintained & Integrated Spark Clusters with Kafka and databases, using Java. Improved the functionality of the product - Wechat Mini Program, using Python, Java and JavaScript.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">February 2018 - May 2018</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Developer Intern</h3>
+            <div class="subheading mb-3">TsingHua University</div>
+            <p>Implemented a real-time Network traffic data filtering distributed system, using Java, Storm, Kafka, Zookeeper. Built and trained machine learning models to find out malicious JavaScript code extracted from HTML scripts. The system applied on CERNET2, the next generation national network in China with completely adoption of IPv6.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">July 2017 - September 2017</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0">Business Analysis Intern</h3>
+            <div class="subheading mb-3">Didi</div>
+            <p>Discussed with business department to confirm the current requirements in data collection, data analysis & data viz. Established data collection daily tasks, weekly tasks and monthly tasks from Hive data warehouse, using SQL Scripts. Built Regression Models to analyze the correlations among several important metrics, using R and Python. Designed & Built up daily, weekly and monthly data viz reports to reflect business situations, using Tableau.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">April 2017 - July 2017</span>
           </div>
         </div>
 
