--- a/index.html
+++ b/index.html
@@ -197,7 +197,19 @@
             <i class="fab fa-java"></i>
           </li>
           <li class="list-inline-item">
-            <i class="icon-cplusplus"></i>
+            <i class="fab fa-html5"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-php"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-js-square"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-git-square"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-linux"></i>
           </li>
         </ul>
 
