modify self-intro part

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
           <a href="https://www.facebook.com/otaku.asahi">
             <i class="fab fa-facebook-f"></i>
           </a>
+          <a href="https://drive.google.com/file/d/1-GB6HXkuG_U0-xkhTiHDQo3tu4rUwOoC/view?usp=sharing">
+            <i class="fab fa-weixin"></i>
+          </a>
         </div>
       </div>
     </section>
