add about me part

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Xu Li - Software Developer & Data Scientist</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +38,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">About</a>
+          <a class="nav-link js-scroll-trigger" href="#home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#aboutme">About Me</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
@@ -61,7 +64,7 @@
 
   <div class="container-fluid p-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="home">
       <div class="w-100">
         <h1 class="mb-0">Xu
           <span class="text-primary">Li</span>
@@ -87,6 +90,16 @@
       </div>
     </section>
 
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="aboutme">
+      <div class="w-100">
+        <h2 class="mb-5">About Me</h2>
+          <p>My name is Xu Li. I am a software developer currently based in Austin, TX. I am a 100% technical person, with a background in both Computer Science and Data Science. My ultimate career dream is to become a very professional data scientist and use my insights in analyzing data to make a difference to the world.<br/>I have already experienced the charming aspects of programming when I stepped into Beihang University as a computer science student. However, it was at my junior year that I fell in love with Data Science. The instructor of the data mining course demonstrated to me about the powerful magic of analyzing data. Fascinated and amazed by the process and result, I decided to learn more knowledge, skills and techniques about data science. Thus, my journey to become a data scientist have started.<br/>This small but important decision has influenced my future career path.I came to UT Austin for further studying about data science and data analysis after finished my undergraduate program. The course projects I involved in UT have promoted my understanding of data to a new level. Not only about analyzing them efficiently, but also about demonstrating them effectively. Also, the 5 internships I have finished in the past, 2 in Austin and 3 in Beijing, were all more or less related to data science, machine learning, big data or databases. They gave me lots of practical experiences in specific data scenarios and helped me learn many new skills and tools when handling data.<br/>My career path to become a data scientist has just started. It is undoubtful that there will be more “beautiful sceneries” along the way. The process of analyzing data is also the process of learning about this world. It will be really fascinating to see the day that I am able to use my knowledge about the data to have impacts on this world and make it a better place!
+          </p>
+      </div>
+    </section>
+    
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
