--- a/index.html
+++ b/index.html
@@ -229,20 +229,17 @@
           </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
+        <div class="subheading mb-3">Languages</div>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            <i class="fa-li fa fa-check" style="color:green"></i>
+            Chinese - Mandarin</li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
+            <i class="fa-li fa fa-check" style="color:green"></i>
+            English</li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+            <i class="fa-li fa fa-check" style="color:yellow"></i>
+            Japanese</li>
         </ul>
       </div>
     </section>
