modify skills part

--- a/index.html
+++ b/index.html
@@ -232,13 +232,13 @@
         <div class="subheading mb-3">Languages</div>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-check" style="color:green"></i>
+            <i class="fas fa-check-double" style="color:green"></i>
             Chinese - Mandarin</li>
           <li>
             <i class="fa-li fa fa-check" style="color:green"></i>
             English</li>
           <li>
-            <i class="fa-li fa fa-check" style="color:yellow"></i>
+            <i class="fa-li fa fa-check" style="color:orange"></i>
             Japanese</li>
         </ul>
       </div>
