--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fas fa-file-certificate"></i>
+            <i class="fas fa-file-certificate" style="color:gold"></i>
             Certificate - Japanese Language Proficiency Test: N2</li>
         </ul>
       </div>
