modify interests part

--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>Apart from being a developer, I am also a fan of Japanese anime. I believe that anime is also a very great type of media form, just like TV drama and movie. An excellent anime can bring the audiences very strong emotional feelings, or convey the audiences somewhat abstract but very important ideas vividly. Also, due to the way of experssion, anime is able to demonstrate nearly any topics perfectly, even for the topics that may seem hard for Hollywood Industry. Because you can just create anything by painting and drawing. Personally, here is my favorite anime list: Your Lie in April, Steins;Gate, Fate/Zero, K-ON, IDOLM@STER, LOVELIVE! etc. Actually the list is very long, I can only show you this tiny part.</p>
+        <p class="mb-0">Besides Anime, I am also very fond of reading manga and light novels, or playing video games when I have spare time. Unlike traditional idea that these items are merely entertainments or waste of time, I think they are absolutely very great types of media forms as well. Their very innovative ways of narrative can often give me a big surprise, refresh my mind and broaden my horizon. If we have any the above items in common, please feel free to contact me, we could definitely have a good talk!</p>
       </div>
     </section>
 
@@ -261,7 +261,7 @@
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fas fa-file-certificate" style="color:gold"></i>
+            <i class="fas fa-certificate" style="color:gold"></i>
             Certificate - Japanese Language Proficiency Test: N2</li>
         </ul>
       </div>
