add project part

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="aboutme">
       <div class="w-100">
         <h2 class="mb-5">About Me</h2>
-          <p>My name is Xu Li. I am a software developer currently based in Austin, TX. I am a 100% technical person, with a background in both Computer Science and Data Science. My ultimate career dream is to become a very professional data scientist and use my insights in analyzing data to make a difference to the world.<br/>I have already experienced the charming aspects of programming when I stepped into Beihang University as a computer science student. However, it was at my junior year that I fell in love with Data Science. The instructor of the data mining course demonstrated to me about the powerful magic of analyzing data. Fascinated and amazed by the process and result, I decided to learn more knowledge, skills and techniques about data science. Thus, my journey to become a data scientist have started.<br/>This small but important decision has influenced my future career path.I came to UT Austin for further studying about data science and data analysis after finished my undergraduate program. The course projects I involved in UT have promoted my understanding of data to a new level. Not only about analyzing them efficiently, but also about demonstrating them effectively. Also, the 5 internships I have finished in the past, 2 in Austin and 3 in Beijing, were all more or less related to data science, machine learning, big data or databases. They gave me lots of practical experiences in specific data scenarios and helped me learn many new skills and tools when handling data.<br/>My career path to become a data scientist has just started. It is undoubtful that there will be more “beautiful sceneries” along the way. The process of analyzing data is also the process of learning about this world. It will be really fascinating to see the day that I am able to use my knowledge about the data to have impacts on this world and make it a better place!
+          <p>My name is Xu Li. I am a software developer currently based in Austin, TX. I am a 100% technical person, with a background in both Computer Science and Data Science. My ultimate career dream is to become a very professional data scientist and use my insights in analyzing data to make a difference to the world.<br/>I have already experienced the charming aspects of programming when I stepped into Beihang University as a computer science student. However, it was at my junior year that I fell in love with Data Science. The instructor of the data mining course demonstrated to me about the powerful magic of analyzing data. Fascinated and amazed by the process and result, I decided to learn more knowledge, skills and techniques about data science. Thus, my journey to become a data scientist have started.<br/>This small but important decision has influenced my future career path. I came to UT Austin for further studying about data science and data analysis after finished my undergraduate program. The course projects I involved in UT have promoted my understanding of data to a new level. Not only about analyzing them efficiently, but also about demonstrating them effectively. Also, the 5 internships I have finished in the past, 2 in Austin and 3 in Beijing, were all more or less related to data science, machine learning, big data or databases. They gave me lots of practical experiences in specific data scenarios and helped me learn many new skills and tools when handling data.<br/>My career path to become a data scientist has just started. It is undoubtful that there will be more “beautiful sceneries” along the way. The process of analyzing data is also the process of learning about this world. It will be really fascinating to see the day that I am able to use my knowledge about the data to have impacts on this world and make it a better place!
           </p>
       </div>
     </section>
@@ -173,6 +173,32 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="project">
       <div class="w-100">
         <h2 class="mb-5">Project</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Student Performance Prediction</h3>
+            <div class="subheading mb-3">Course Project of Data Mining at Beihang University</div>
+            <p>The topic and data of this project was acquired from 2010 KDD-Cup Competition. Built up & trained the predicting model, based on Unsupervised Learning and Clustering algorithms, using Python. Improved the performance of predicting model by optimizing feature selection, related algorithms and key parameters. Final model accurately predicted students’ performance tested by the testing dataset with RMSE equal to 0.41.</p>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Online Shopping Website Developing</h3>
+            <div class="subheading mb-3">Course Project of Software Engineering at Beihang University</div>
+            <p>Analyzed the requirements and designed the general architecture and components of the website. Developed and implemented the website step by step, using HTML, JavaScript, PHP, Java, MySQL. Tested each part of the website and wrote development documentation.</p>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Simplified C-Compiler Developing</h3>
+            <div class="subheading mb-3">Course Project of Compiler Theory at Beihang University</div>
+            <p>Designed a simplified C-Complier consisted of 4 parts – Scanner, Parser, Semantic Analyzer & Assembly Generator. Implemented and tested the Compiler based on the above design, using C++ programming language. Successfully output the MIPS assembly codes given C scripts, able to run on the MARS platform.</p>
+          </div>
+        </div>
+
+
       </div>
     </section>
     
