modify project part

--- a/index.html
+++ b/index.html
@@ -176,6 +176,18 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Austin Crime Data Dashboard</h3>
+            <div class="subheading mb-3">Course Project of Data Storytelling at UT Austin</div>
+            <p>Used data published by Austin goverment to make a dashboard to demonstrate some general summarization of crime events in Austin. Help students, teachers and staffs get a better understanding of the safety level around their neighborhoods.</p>
+          </div>
+          <a href="https://public.tableau.com/profile/.82395188#!/vizhome/FinalProject-DataStorytelling/Dashboard">
+            <i class="fas fa-arrow-right" style="color:darkorange"></i>
+          </a>
+        </div>
+
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Student Performance Prediction</h3>
             <div class="subheading mb-3">Course Project of Data Mining at Beihang University</div>
             <p>The topic and data of this project was acquired from 2010 KDD-Cup Competition. Built up & trained the predicting model, based on Unsupervised Learning and Clustering algorithms, using Python. Improved the performance of predicting model by optimizing feature selection, related algorithms and key parameters. Final model accurately predicted students’ performance tested by the testing dataset with RMSE equal to 0.41.</p>
