modify icon size

--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
             <div class="subheading mb-3">Course Project of Data Storytelling at UT Austin</div>
             <p>Used data published by Austin goverment to make a dashboard to demonstrate some general summarization of crime events in Austin. Help students, teachers and staffs get a better understanding of the safety level around their neighborhoods.</p>
           </div>
-          <a href="https://public.tableau.com/profile/.82395188#!/vizhome/FinalProject-DataStorytelling/Dashboard">
-            <i class="fas fa-arrow-right" style="color:darkorange"></i>
-          </a>
         </div>
+        <a href="https://public.tableau.com/profile/.82395188#!/vizhome/FinalProject-DataStorytelling/Dashboard">
+          <i class="fas fa-arrow-right" style="color:darkorange font-size:64px"></i>
+        </a>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
