--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Austin Crime Data Dashboard</h3>
             <div class="subheading mb-3">Course Project of Data Storytelling at UT Austin</div>
-            <p>Used data published by Austin goverment to make a dashboard to demonstrate some general summarization of crime events in Austin. Help students, teachers and staffs get a better understanding of the safety level around their neighborhoods.</p>
+            <p>Used data published by Austin goverment to make a dashboard to demonstrate some general summarization of crime events in Austin. Help students, teachers and staffs get a better understanding of the safety level around their neighborhoods. Using Tableau.</p>
           </div>
           <a href="https://public.tableau.com/profile/.82395188#!/vizhome/FinalProject-DataStorytelling/Dashboard">
             <i class="fas fa-arrow-right" style="color:darkorange"></i>
