--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Xu Li</span>
       <span class="d-none d-lg-block">
+      	<img class="img-fluid mx-auto mb-2" src="img/Xu.jpg" alt="">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
     </a>
