Capstone Project Added

--- a/index.html
+++ b/index.html
@@ -177,6 +177,18 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Sales Opportunity Status Prediction based on Users’ Activity Data</h3>
+            <div class="subheading mb-3">Capstone Project at Vertify</div>
+            <p>VertifyData is a data integration company that help their customer companies integrate marketing data and sales data together. Usually, sales opportunities are contacted and assessed case by case manually, which is an uncertain and inefficient process. This capstone project aims to improve this situation. It uses the activity data from those customer companies, build machine learning models and make predictions about the status of sales opportunities. Provide to those customers with strategic and valuable information automatically to facilitate better marketing analysis and sales achievements.</p>
+          </div>
+          <a href="https://www.google.com">
+            <i class="fas fa-arrow-right" style="color:darkorange"></i>
+          </a>
+        </div>
+
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Austin Crime Data Dashboard</h3>
             <div class="subheading mb-3">Course Project of Data Storytelling at UT Austin</div>
             <p>Used data published by Austin goverment to make a dashboard to demonstrate some general summarization of crime events in Austin. Help students, teachers and staffs get a better understanding of the safety level around their neighborhoods. Using Tableau.</p>
