--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <div class="subheading mb-3">Capstone Project at Vertify</div>
             <p>VertifyData is a data integration company that help their customer companies integrate marketing data and sales data together. Usually, sales opportunities are contacted and assessed case by case manually, which is an uncertain and inefficient process. This capstone project aims to improve this situation. It uses the activity data from those customer companies, build machine learning models and make predictions about the status of sales opportunities. Provide to those customers with strategic and valuable information automatically to facilitate better marketing analysis and sales achievements.</p>
           </div>
-          <a href="https://www.google.com">
+          <a href="https://docs.google.com/presentation/d/1rSP1ePON05lnqCxx4i_T6ogJ7XIQK0zVtT3pgqloPNY/edit?usp=sharing">
             <i class="fas fa-arrow-right" style="color:darkorange"></i>
           </a>
         </div>
