--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Data Science Intern</h3>
-            <div class="subheading mb-3">Vertify</div>
-            <p>Added intelligence to data integration services. Made predictions about sales opportunity status based on users' activity data. Provided probability and score of every in-progress sales opportunities. Using Python and Machine Learning Algorithms. </p>
+            <div class="subheading mb-3">VertifyData</div>
+            <p>Communicated with product team and analyzed related business concepts and data product requirements. Communicated with engineering team and figured out backend architecture of data storage and data integration. Built prediction models about sales opportunity based on clients’ customer data of marketing behaviors. Developed a score evaluation system, provided probability and score of every in-progress sales opportunity target. The above works were mainly done by using Python.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">February 2020 - Present</span>
+            <span class="text-primary">February 2020 - May 2020</span>
           </div>
         </div>
 
